[gd_scene load_steps=4 format=3 uid="uid://ccrnwaq2pyl0p"]

[ext_resource type="PackedScene" uid="uid://biqsjve7g1565" path="res://src/scenes/Card.tscn" id="1_7lhq0"]
[ext_resource type="Script" path="res://src/scripts/BishopCard.gd" id="1_usmn5"]
[ext_resource type="Texture2D" uid="uid://k4i45pm08kok" path="res://assets/sprites/chessPieces/bishop.png" id="2_7fcx6"]

[node name="BishopCard" type="Node2D"]
script = ExtResource("1_usmn5")

[node name="Card" parent="." node_paths=PackedStringArray("cardArt") instance=ExtResource("1_7lhq0")]
cardName = "Bishop"
cardCost = 3
cardDescription = "Attacks along the diagonal lines"
cardArt = NodePath("../CardImage")

[node name="CardImage" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -25)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_7fcx6")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Card" to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="." method="_on_card_mouse_exited"]
